<resources>
    <!-- Login -->
    <string name="app_name">Mis Tickets</string>
    <string name="btn_logina">INICIA SESION</string>
    <string name="link_forgotpass">¿Olvidaste tú contraseña?</string>
    <string name="link_registra">Registrar</string>
    <string name="ed_user">Usuario</string>
    <string name="ed_password">Contraseña</string>
    <string name="check_recuerda_credenciales">Recordar Credenciales</string>
    <string name="online">On-Line </string>
    <string name="barra">/ </string>
    <string name="offline">Off-Line </string>
    <string name="carga">Espere mientras se comprueban los datos</string>
    <string name="sw"></string>
    <!-- Registro -->
    <string name="bt_registro">Registrar Usuario</string>
    <string name="ed_nombre">Nombre</string>
    <string name="ed_apellidos">Apellidos</string>
    <string name="ed_email">E-Mail</string>
    <string name="ed_repite_password">Repite la Contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pin">Pin de Seguridad</string>
    <!-- Recuperar Contraseña -->
    <string name="bt_recoverypass">Enviar Contraseña</string>
    <string name="bt_recoverypass_local">Introduce el PIN de seguridad</string>
    <!-- RecyCledView Tickets -->
    <string name="iv_descriptiva">Imagen de la compra</string>
    <string name="tv_tienda">Establecimiento:</string>
    <string name="tv_fecha">Fecha:</string>
    <string name="tv_descripcion">Descripción:</string>
    <!-- Nuevo Ticket -->
    <string name="fecha">Fecha de la compra</string>
    <string name="direccion">Dirección del establecimiento</string>
    <string name="localidad">Localidad</string>
    <string name="provincia">Provincia</string>
    <string name="duracion_garantia">Garantía </string>
    <string name="recoradr">Avisar 15 días antes de finalizar la garantía</string>
    <string name="añadir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="toolbarNuevoTicket">Nuevo Ticket</string>
    <string name="update">Actualizar</string>
    <string name="selecciona_categoria">Selecciona una Categoría</string>
    <string name="precio">Precio</string>
    <!-- Gestion de Fotos -->
    <string name="addToTicket">Guardar cambios</string>
    <string name="foto1">Foto 1</string>
    <string name="foto2">Foto 2</string>
    <string name="foto3">Foto 3</string>
    <string name="foto4">Foto 4</string>
    <!-- Visor de Imagenes -->
    <string name="cerrar">Cerrar</string>
    <string name="anterior"> Ant </string>
    <string name="siguiente"> Sig </string>
    <string name="abrir">Abrir</string>

    <!-- Visor de Tickets -->
    <string name="ubicacion">Provincia/Localidad</string>
    <string name="pergarantia">Período de garantía</string>
    <string name="categoria">Categoría</string>
    <!-- busquedas -->
    <string name="buscar">Buscar</string>
    <string name="busqueda_descripcion">La descripción contiene...</string>
    <string name="busqueda_tienda">El nombre del establecimiento contiene...</string>
    <string name="busqueda_localidad">Introduza la localidad</string>
    <string name="busqueda_fecha">Seleccione una fecha</string>
    <string name="busqueda_titulo">Introduza los parámetros de búsqueda</string>

    <!-- Notificciones -->
    <string name="channel_name">Garantías</string>
    <string name="channel_description">Tickets cuya garantia caduca en 15 días o menos</string>
    <!-- StatusBAr-->
    <string name="cargando">Cargando tickets. Por favor espere.</string>

    <!-- main Menu -->
    <string name="menuListado">Listados rápidos</string>
    <string name="menuPersonales">Tickets Personales</string>
    <string name="menuCaduca">Fin de garantía próxima</string>
    <string name="menuDietas">Dietas de empresa</string>
    <string name="menuNuevo">Nuevo ticket</string>
    <string name="menuBuscar">Buscar</string>
    <string name="menuSyc">Sycronizar Imagenes</string>
    <string name="menuCerrar">Cerrar Sesion</string>
    <string name="borrar_usuario">Eliminar Usuario</string>

    <!-- Syscronizar -->
    <string name="syncro_email">Usuario Cloud</string>
    <string name="syncro_user">Usuario Local</string>
    <string name="syncro_pass">Password</string>
    <string name="syncro_des_cloud">Introducza los datos de la cuenta cloud con la que quiere sycronizar</string>
    <string name="syncro_des_local">Introducza los datos de la cuenta local con la que quiere sycronizar</string>
    <string name="syncro_syncronizar">Syncronizar</string>
    <string name="syncro_cancelar">Calcelar</string>

    <!-- Graficas -->
    <string name="grafica">Mostrar Gráfica</string>

    <!-- Dietas -->
    <string name="dietas">Dietas</string>
    <string name="gest_dietas">Gestionar Dietas</string>
    <string name="guardar">Guardar</string>
    <string name="fechaentrega">Fecha de entrega a la empresa</string>
    <string name="fechacobro">Fecha de cobro</string>
    <string name="metodocobro">Método de cobro</string>
    <string name="metodoentrega">Selecciona un método de entrega </string>
    <string name="alemailde">A la dirección de email</string>
    <string name="alwhatsappde">Al número de Whatsapp</string>
    <string name="entregadoa">Entegado a </string>
    <string name="tituloentrega">¿Cuándo se entregó el ticket?</string>
    <string name="titulocobro">¿Cuándo se cobro el ticket?</string>
    <string name="sin_cobrar">Sin Cobrar</string>
    <string name="cobrado">Cobrado</string>
    <string name="sin_pasar">Sin Pasar</string>

    <!-- Metodos de envio de dietas -->
    <string-array name="enviodietas">
        <item>Selecciona un método de envío</item>
        <item>E-Mail</item>
        <item>Whatsapp</item>
        <item>En mano</item>

    </string-array>

    <!--lista de privincias en España -->
    <string-array name="provincias">
        <item>Provincia</item>
        <item>A Coruña</item>
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Baleares</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>

    <!-- Array de annos permitidos para la duración de la garantia -->
    <string-array name="annos">
        <item>Garantía</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Array de Categorías -->
    <string-array name="categorias">
        <item>Selecciona una Categoría</item>
        <item>Otros</item>
        <item>Restauración</item>
        <item>Alimentación</item>
        <item>Informática</item>
        <item>Electrodomésticos</item>
        <item>Menaje</item>
        <item>Deporte</item>
        <item>Salud</item>
        <item>Belleza</item>
        <item>Papelería/Oficina</item>
        <item>Mobiliario</item>
        <item>Ropa</item>
        <item>OCIO</item>
        <item>Seguros</item>
        <item>Gastos Hogar</item>
        <item>Gastos Movilidad</item>
        <item>Hospedaje</item>
        <item>Material Obra</item>

    </string-array>

    <!-- Array de Meses -->
    <string-array name="meses">
        <item>Mes</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Actubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>


    </string-array>

</resources>
