<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menuListado">
        <menu>
            <item
                android:id="@+id/todo"
                android:title="@string/menuTodos" />
            <item
                android:id="@+id/caducan"
                android:title="@string/menuCaduca" />
        </menu>
    </item>

    <item
        android:id="@+id/newticket"
        android:title="@string/menuNuevo" />
    <item
        android:id="@+id/findticket"
        android:title="@string/menuBuscar" />
    <item
        android:id="@+id/sycronizar"
        android:title="Sycronizar" />
    <item
        android:id="@+id/eliminar_usuario"
        android:title="@string/borrar_usuario" />

    <item
        android:id="@+id/closesission"
        android:title="@string/menuCerrar" />


    <item
        android:id="@+id/newticketicon"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menuNuevo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/findticketicon"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menuBuscar"
        app:showAsAction="ifRoom" />
</menu>