<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestorFotos">

    <ImageView
        android:id="@+id/img_foto3"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/foto3" />

    <ImageView
        android:id="@+id/img_foto4"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/foto4" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:onClick="aceptar"
        android:text="@string/addToTicket"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_foto1"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/foto1"
        app:layout_constraintBottom_toTopOf="@+id/img_foto3"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/img_foto2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/img_foto4"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/foto2" />


</androidx.constraintlayout.widget.ConstraintLayout>