<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoTicket">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Añadir Ticket" />

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/ed_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/tv_descripcion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/ed_tienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/tv_tienda"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_descripcion" />

    <EditText
        android:id="@+id/ed_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tienda" />

    <EditText
        android:id="@+id/ed_localidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/localidad"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_provincias" />

    <Spinner
        android:id="@+id/spinner_provincias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/provincia"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_direccion" />

    <EditText
        android:id="@+id/text_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="80dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fecha"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_localidades" />

    <ImageButton
        android:id="@+id/img_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_localidades"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <Spinner
        android:id="@+id/spinner_garantia"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/duracion_garantia"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/check_aviso"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_aviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="30dp"
        android:text="@string/recoradr"
        app:layout_constraintBottom_toTopOf="@+id/btn_aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="insertar"
        android:id="@+id/btn_aceptar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/añadir"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="cancelarInsert"
        android:id="@+id/btn_cancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancelar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rds_garantias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="15dp"
        android:checkedButton="@id/rd_annos"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/check_aviso"
        app:layout_constraintStart_toEndOf="@+id/spinner_garantia">

        <RadioButton
            android:id="@+id/rd_annos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Años" />

        <RadioButton
            android:id="@+id/rd_meses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Meses" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_categorias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:autofillHints="@string/selecciona_categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fecha" />

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categorias" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:text="€"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/etPrecio"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categorias" />

    <CheckBox
        android:onClick="isDietas"
        android:id="@+id/cb_dietas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/dietas"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categorias" />

    <Button
        android:onClick="gestdietas"
        android:id="@+id/btn_dietas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:background="@color/colorPrimary"
        android:text="@string/gest_dietas"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_categorias" />


</androidx.constraintlayout.widget.ConstraintLayout>