<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Busquedas">

    <ImageButton
        android:id="@+id/find_img_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_ed_localidades"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <EditText
        android:id="@+id/find_et_fecha"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="80dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fecha"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_ed_localidades" />

    <EditText
        android:id="@+id/find_ed_localidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/localidad"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_spinner_provincias" />

    <Spinner
        android:id="@+id/find_spinner_provincias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/provincia"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_find_tienda" />

    <Button
        android:onClick="buscar"
        android:id="@+id/btbuscar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="25dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <Button
        android:onClick="cancelar"
        android:id="@+id/btcancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/et_find_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/busqueda_descripcion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/busqueda_titulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_find_tienda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/busqueda_tienda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_find_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>