<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Syncronizar">

    <EditText
        android:id="@+id/ed_syncro_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/syncro_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sycnro_des" />

    <EditText
        android:id="@+id/ed_sycnro_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="@string/syncro_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_syncro_user" />

    <TextView
        android:id="@+id/tv_sycnro_des"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/syncro_des_cloud"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="sycronizar"
        android:id="@+id/btn_aceptar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/syncro_syncronizar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:onClick="cancelar"
        android:id="@+id/btn_cancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/syncro_cancelar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pbCargando"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_cargando"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tv_cargando"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/cargando"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_aceptar"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>